[package]
name = "Prusce"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
local-ip-address = "0.6.5"
rand = "0.9.1"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "test"
path = "src/test.rs"
